--- a/templates/Explore.html
+++ b/templates/Explore.html
@@ -11,15 +11,15 @@
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
+  {% load static %}
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
-
+  
   <title>Title page</title>  
 
+  
 
-
-<link href="./excss.css" rel="stylesheet"></head>
+<link href="{% static 'excss.css' %}" rel="stylesheet"></head>
 
 <body class="">
 
@@ -69,7 +69,7 @@
             <h2>About IDAC</h2>
             <div class="row">
               <div class="col-md-4">
-                <p><img src="./assets/images/doctor.jfif" class="img-responsive centerEX" alt=""></p>
+                <p><img src="{% static 'doctor.jfif' %}" class="img-responsive centerEX" alt=""></p>
               </div>
               <div class="col-md-8">
 
@@ -87,13 +87,13 @@
             <h2>Check, What's there for you!</h2>
             <div class="row">
               <a href="./MA/Minor Ailments.html"><div class="col-md-6">
-                <img src="./assets/images/exi1.jpg" class="img-responsive centerEX exi"  >
+                <img src="{% static 'exi1.jpg' %}" class="img-responsive centerEX exi"  >
                 </a>
               <h3 class="h5">Minor Ailments</h3>
                 
               </div>
               <div class="col-md-6">
-                <a href="./sd.html"><img src="./assets/images/exi2.jpg" class="img-responsive centerEX exi"></a>
+                <a href="./sd.html"><img src="{% static 'exi2.jpg' %}" class="img-responsive centerEX exi"></a>
                 
                 <h3 class="h5">Skin Diseases</h3>
               </div>
@@ -101,14 +101,14 @@
 
               <div class="row">
               <div class="col-md-6">
-                <a href="br.html"><img src="./assets/images/exi3.jpg" class="img-responsive centerEX exi" ></a>
+                <a href="br.html"><img src="{% static 'exi3.jpg' %}" class="img-responsive centerEX exi" ></a>
                 
                 <h3 class="h5">Blood Reports</h3>
                 <p>(Calculate BMI)</p>
               </div>
 
               <div class="col-md-6">
-                <a href="xr.html"><img src="./assets/images/exi4.jpg" class="img-responsive centerEX exi" ></a>
+                <a href="xr.html"><img src="{% static 'exi4.jpg' %}" class="img-responsive centerEX exi" ></a>
                 
                 <h3 class="h5">X-RAY Reports</h3>
                 <p>(Fractures)</p>
