--- a/templates/index1.html
+++ b/templates/index1.html
@@ -14,13 +14,16 @@
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
-  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  {% load static %}
+  <link rel="apple-touch-icon" sizes="180x180" href=" {% static 'apple-icon-180x180.png' %}">
   <link href="./assets/favicon.ico" rel="icon">
 
   <title>IDAC</title>  
-
-<link href="{{STATIC_URL}}indexcss.css" rel="stylesheet"></head>
+  
+  <link href="{% static 'indexcss.css' %}" rel="stylesheet">
+<!-- <link href="{{STATIC_URL}}indexcss.css" rel="stylesheet">
+ -->
+</head>
 
 <body class="minimal">
 <div id="site-border-left"></div>
@@ -40,9 +43,9 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">IDAC</a></li>
-          <li><a href="./about.html" target="_blank" title="">02 : About us</a></li>
-          <li><a href="./Contact.html" target="_blank" title="">03 : Contact us</a></li>
+          <li><a href="{% static 'index.html' %}" title="">IDAC</a></li>
+          <li><a href="{% static 'about.html' %}" target="_blank" title="">02 : About us</a></li>
+          <li><a href="{% static 'Contact.html' %}" target="_blank" title="">03 : Contact us</a></li>
           <li><a href="./sign.html" target="_blank" title="">04 : Sign up</a></li>
           <li><a href="./log.html" target="_blank" title="">05 : Login</a></li>
         </ul>
@@ -53,7 +56,7 @@
   </nav>
 </header>
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/space.jpg')">
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url( {% static 'space.jpg' %} )">
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -67,7 +70,7 @@
                 </span>
                 <span id="typed"></span>
               </h1>
-              <a href="Explore.html" type="button" class="btn btn-primary btn-lg" target="_blank">Explore!</a>
+              <a href="/explore" type="button" class="btn btn-primary btn-lg" target="_blank">Explore!</a>
               </div>
           </div>
         </div>
@@ -83,6 +86,6 @@
 </script>
 
 
-<script type="text/javascript" src="./indexjs.js"></script></body>
+<script type="text/javascript" src="{% static './indexjs.js' %}"></script></body>
 
 </html>
