--- a/templates/Explore.html
+++ b/templates/Explore.html
@@ -39,11 +39,11 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">IDAC</a></li>
-          <li><a href="./about.html" target="_blank" title="">02 : About us</a></li>
-          <li><a href="./Contact.html" target="_blank" title="">03 : Contact us</a></li>
-          <li><a href="./sign.html" target="_blank" title="">04 : Sign up</a></li>
-          <li><a href="./log.html" target="_blank" title="">05 : Login</a></li>
+          <li><a href="/" title="">IDAC</a></li>
+          <li><a href="/about" target="_blank" title="">02 : About us</a></li>
+          <li><a href="/contact" target="_blank" title="">03 : Contact us</a></li>
+          <li><a href="/signin" target="_blank" title="">04 : Sign up</a></li>
+          <li><a href="/login" target="_blank" title="">05 : Login</a></li>
         </ul>
 
       </div> 
