--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -11,13 +11,13 @@
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
+  {% load static %}
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
   <title>Contact</title>  
 
-<link href="./contact.css" rel="stylesheet"></head>
+<link href="{% static 'contact.css' %}" rel="stylesheet"></head>
 
 <body class="" bgcolor="#02357">
 
@@ -36,11 +36,11 @@
         </button>
          <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">IDAC</a></li>
-          <li><a href="./about.html" target="_blank" title="">02 : About us</a></li>
-          <li><a href="./contact.html" target="_blank" title="">03 : Contact us</a></li>
-          <li><a href="./signup.html" target="_blank" title="">04 : Sign up</a></li>
-          <li><a href="./login.html" target="_blank" title="">05 : Login</a></li>
+          <li><a href="/index" title="">IDAC</a></li>
+          <li><a href="/about" title="">02 : About us</a></li>
+          <li><a href="/contact" title="">03 : Contact us</a></li>
+          <li><a href="/signup" title="">04 : Sign up</a></li>
+          <li><a href="/login" title="">05 : Login</a></li>
         </ul>
 
       </div> 
