--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
     <title>LOGIN</title>
     {% load static %}
     <!-- Font Icon -->
-    <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="{% static 'fonts/material-icon/css/material-design-iconic-font.min.css' %}">
 
     <!-- Main css -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
@@ -20,8 +20,8 @@
             <div class="container">
                 <div class="signin-content">
                     <div class="signin-image">
-                        <figure><img src="images/login.jfif" alt="sing up image"></figure>
-                        <a href="./signup.html" class="signup-image-link">Create an account</a>
+                        <figure><img src="{% static 'login.jfif' %}" alt="sing up image"></figure>
+                        <a href="/signin" class="signup-image-link">Create an account</a>
                     </div>
 
                     <div class="signin-form">
