change singin to signup

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -46,7 +46,7 @@
           <li><a href="/" title="">IDAC</a></li>
           <li><a href="/about" title="">02 : About us</a></li>
           <li><a href="/contact" title="">03 : Contact us</a></li>
-          <li><a href="/signin" title="">04 : Sign up</a></li>
+          <li><a href="/signup" title="">04 : Sign up</a></li>
           <li><a href="/login" title="">05 : Login</a></li>
         </ul>
 
