--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -36,7 +36,7 @@
         </button>
          <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="/index" title="">IDAC</a></li>
+          <li><a href="/" title="">IDAC</a></li>
           <li><a href="/about" title="">02 : About us</a></li>
           <li><a href="/contact" title="">03 : Contact us</a></li>
           <li><a href="/signup" title="">04 : Sign up</a></li>
