--- a/templates/Contact.html
+++ b/templates/Contact.html
@@ -64,16 +64,16 @@
         <div class="card">
           <div class="card-block">
             <h2>Contact</h2>
-            <form action="" class="reveal-content">
+            <form method="post" class="reveal-content">
 				{% csrf_token %}
               <div class="form-group">
-                <input type="email" class="form-control" id="email" placeholder="Email">
+                <input type="email" name="email" class="form-control" id="email" placeholder="Email">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" id="subject" placeholder="Subject">
+                <input type="text" name="subject" class="form-control" id="subject" placeholder="Subject">
               </div>
               <div class="form-group">
-                <textarea class="form-control" rows="5" placeholder="Enter your message"></textarea>
+                <textarea class="form-control" name="msg" rows="5" placeholder="Enter your message"></textarea>
               </div>
               <div class="form-group">
                 <button type="submit" class=" btn btn-primary">Send message</button>
